RESOLVED FIXED151357
[WinCairo][MediaFoundation] Current playback time is not shown.
https://bugs.webkit.org/show_bug.cgi?id=151357
Summary [WinCairo][MediaFoundation] Current playback time is not shown.
peavo
Reported 2015-11-17 13:08:53 PST
We need to implement the currentTime() method.
Attachments
Patch (3.41 KB, patch)
2015-11-17 13:23 PST, peavo
no flags
Patch (4.22 KB, patch)
2015-11-17 13:48 PST, peavo
no flags
peavo
Comment 1 2015-11-17 13:23:09 PST
Alex Christensen
Comment 2 2015-11-17 13:26:15 PST
Comment on attachment 265704 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=265704&action=review > Source/WebCore/platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:1282 > + return clockTime / 10.0f / 1000.0f / 1000.0f; Don't we already have a named constant for this? If not, we should.
peavo
Comment 3 2015-11-17 13:48:36 PST
peavo
Comment 4 2015-11-17 13:49:22 PST
(In reply to comment #2) > Comment on attachment 265704 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=265704&action=review > > > Source/WebCore/platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:1282 > > + return clockTime / 10.0f / 1000.0f / 1000.0f; > > Don't we already have a named constant for this? If not, we should. Thanks, good call, updated patch :)
peavo
Comment 5 2015-11-17 13:51:54 PST
Thanks for the swift review :)
WebKit Commit Bot
Comment 6 2015-11-17 14:41:29 PST
Comment on attachment 265705 [details] Patch Clearing flags on attachment: 265705 Committed r192541: <http://trac.webkit.org/changeset/192541>
WebKit Commit Bot
Comment 7 2015-11-17 14:41:32 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.