[WinCairo][MediaFoundation] Current playback time is not shown. https://bugs.webkit.org/show_bug.cgi?id=151357

Reviewed by Alex Christensen.

We need to implement the currentTime() method.

* platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:
(WebCore::MediaPlayerPrivateMediaFoundation::durationDouble):
(WebCore::MediaPlayerPrivateMediaFoundation::currentTime):
(WebCore::MediaPlayerPrivateMediaFoundation::paused):
(WebCore::MediaPlayerPrivateMediaFoundation::CustomVideoPresenter::paintCurrentFrame):
(WebCore::MediaPlayerPrivateMediaFoundation::CustomVideoPresenter::currentTime):
(WebCore::MediaPlayerPrivateMediaFoundation::CustomVideoPresenter::isActive):
* platform/graphics/win/MediaPlayerPrivateMediaFoundation.h:


Canonical link: https://commits.webkit.org/169520@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192541 268f45cc-cd09-0410-ab3c-d52691b4dbfc